--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/prii.jpg" alt="Prii's Profile Picture" height="150" width="150">
+      <td><img src="prii.jpg" alt="Prii's Profile Picture" height="150" width="150">
       </td>
       <td>
         <h1>Priyanka Singh</h1>
